Fix link overflow problem in chrome

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -53,3 +53,8 @@
 	border-bottom-right-radius:0;
 	border-bottom-left-radius:0;
 }
+
+.home-sidebar{
+	overflow: hidden;
+	overflow-wrap: break-word;
+}
